--- a/ansible/reddit_app.yml
+++ b/ansible/reddit_app.yml
@@ -22,23 +22,26 @@
 - name: "Reddit App: Install mongodb"
   hosts: all
   gather_facts: no
+  become: true
 
   tasks:
   - name: Add apt-key for mongodb repo
     apt_key:
-      keyserver: hkp://keyserver.ubuntu.com:80
+      keyserver: hkp://keyserver.ubuntu.com
       id: EA312927
       state: present
   - name: Add mongodb repository
-      apt_repository:
-        repo: http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.2 multiverse
+    apt_repository:
+      repo: deb http://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/3.2 multiverse
   - name: Install mongodb package
-      apt:
-        name: mongodb-org
-        update_cache: yes
-  - name: Install mongodb package
-    debug:
-      msg: "В этом сценарии нужно добавить модули для установки mongodb, после можно удалить вызов модуля debug, который выводит это сообщение"
+    apt:
+      name: mongodb-org
+      update_cache: yes
+  - name: Add mongodb to systemd
+    service: 
+      name=mongod 
+      state=started 
+      daemon-reload=true
 
 # Deploy reddit app
 - name: "Reddit App: Deploy application"
