--- a/packer/app.json
+++ b/packer/app.json
@@ -25,8 +25,8 @@
 	],
 	"provisioners": [
 		{
-		"type": "shell",
-		"script": "scripts/install_ruby.sh"
+		"type": "ansible",
+		"playbook_file": "ansible/reddit_app.yml"
 		}
 	]
 }
