--- a/packer/app.json
+++ b/packer/app.json
@@ -26,7 +26,7 @@
 	"provisioners": [
 		{
 		"type": "ansible",
-		"playbook_file": "ansible/reddit_app.yml"
+		"playbook_file": "ansible/packer_reddit_app.yml"
 		}
 	]
 }
