--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-hostfile = hosts
+hostfile = ./environments/stage/hosts
 #hostfile = inventory/gce.py
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
