--- a/ansible/app.yml
+++ b/ansible/app.yml
@@ -1,6 +1,12 @@
 - name: Configure app host
   hosts: app
+  gather_facts: false
   become: true
+
+  pre_tasks:
+    - name: Install python for Ansible
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+      changed_when: false
 
   roles:
     - app
