--- a/ansible/db.yml
+++ b/ansible/db.yml
@@ -1,6 +1,12 @@
 - name: Configure mongodb host for reddit project
   hosts: db
+  gather_facts: false
   become: true
+
+  pre_tasks:
+    - name: Install python for Ansible
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+      changed_when: false
 
   roles:
     - db
