--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,3 +4,4 @@ hostfile = ./environments/stage/hosts
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 host_key_checking = False
+roles_path = ./roles
